# vdg

./: .gitignore  .python-version  CLAUDE.md  README.md  addFrameBorders_v01.py  bbox_lk_track_v02.py  bbox_lk_track_v03.py  bbox_lk_track_v04.py  bbox_lk_track_v05.py  bbox_lk_track_v08.py  blenderKeyframeExport.py  blenderTrackerExport_v01.py  blenderTrackerExport_v05.py  blenderTrackerExport_v06.py  blenderTrackerExport_v07.py  blenderTrackerExport_v08.py  blenderTrackerExport_v09.py  blog_post_ai_revolution.md  dis_opt_flow2.py  frameavg.py  frameavg_v02.py  frameavg_v05.py  git-commands  hough.py  lens_correction.py  metadatacp.py  oflow.py  pyproject.toml  requirements.txt  slitscanner.py  stabFromTrack_v01.py  stabFromTrack_v02.py  stabFromTrack_v03.py  stabFromTrack_v04.py  stabFromTrack_v05.py  timestrobe.py  timestrobe_v03.py  vidstab_script.py
examples/: minimal_example.py  track_and_stabilize.py
python/: animcurves.py  animcurves.py~
scripts/: postProcessMovies.py  vdg_bridge.py  vdg_tracking_layout.blend
tests/: test_core.py
vdg/: __init__.py  __main__.py
vdg/core/: __init__.py  base.py  config.py  hardware.py  video.py
vdg/nodes/: __init__.py  runner.py  ryven_nodes.py  web_editor.py
vdg/outputs/: __init__.py  base.py  data.py  manager.py  video.py
vdg/pipeline/: __init__.py
vdg/postprocess/: __init__.py  operations.py
vdg/processing/: __init__.py  color.py  frame_average.py
vdg/tracking/: __init__.py  stabilizer.py  track_io.py  tracker.py
vdg/utils/: __init__.py  metadata.py
workflows/: blender_track.json  feature_track.json  feature_track_2p.json  post_process.json  stabilize_linear_composite.json
