[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vdg"
version = "0.1.0"
description = "Video Development and Grading Toolkit - Point tracking, stabilization, and frame processing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["video", "tracking", "stabilization", "opencv", "frame-averaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
oiio = [
    "OpenImageIO>=2.3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "vdg[oiio,dev]",
]

[project.scripts]
vdg = "vdg.__main__:main"
vdg-track = "vdg.tracking.cli:main"
vdg-stabilize = "vdg.tracking.stabilizer_cli:main"
vdg-frameavg = "vdg.processing.frameavg_cli:main"
vdg-process = "vdg.pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/vdg"
Documentation = "https://github.com/yourusername/vdg#readme"
Repository = "https://github.com/yourusername/vdg.git"
Issues = "https://github.com/yourusername/vdg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vdg*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
